--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "node-prac",
-  "version": "0.0.0",
-  "private": true,
+  "name": "node_prac",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "mongodb": "^3.5.5",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LynnWonder/node_prac.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LynnWonder/node_prac/issues"
+  },
+  "homepage": "https://github.com/LynnWonder/node_prac#readme",
+  "devDependencies": {
+    "@types/node": "^18.11.10",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.9.3"
   }
 }
